[Indexer] Update api and db (#1262)
* Update Indexer api

- Add coin to db and as param to query
- Use GET instead of POST

* Fix tests

* Add Swagger
