# api/endpoint/token.go
@@ -140,13 +140,35 @@ func GetTokensByAddressIndexer(c *gin.Context, instance tokensearcher.Instance) 
 	c.JSON(http.StatusOK, result)
 }
 
+// @Description Get new tokens
+// @ID tokens_new_v3
+// @Summary Get list of new tokens by coin from specific unix timstamp
+// @Accept json
+// @Produce json
+// @Tags Transactions
+// @Param from query int true "unix timestamp"
+// @Param coin query int false "coin like 60"
+// @Success 200 {object} tokenindexer.Response
+// @Router /v3/tokens/new [get]
 func GetNewTokens(c *gin.Context, instance tokenindexer.Instance) {
-	var query tokenindexer.Request
-	if err := c.Bind(&query); err != nil {
+	var request tokenindexer.Request
+	fromRaw := c.Query("from")
+	coinRaw := c.DefaultQuery("coin", "-1")
+
+	from, err := strconv.Atoi(fromRaw)
+	if err != nil {
 		c.AbortWithStatusJSON(http.StatusBadRequest, errorResponse(err))
-		return
 	}
-	resp, err := instance.HandleNewTokensRequest(query, c.Request.Context())
+
+	coin, err := strconv.Atoi(coinRaw)
+	if err != nil {
+		c.AbortWithStatusJSON(http.StatusBadRequest, errorResponse(err))
+	}
+
+	request.Coin = coin
+	request.From = int64(from)
+
+	resp, err := instance.HandleNewTokensRequest(request, c.Request.Context())
 	if err != nil {
 		c.AbortWithStatusJSON(http.StatusInternalServerError, errorResponse(err))
 		return
