# docs/swagger.yaml
@@ -1,21 +1,4 @@
 definitions:
-  api_endpoint.AddressBatchRequest:
-    properties:
-      address:
-        type: string
-      coin:
-        type: integer
-    type: object
-  api_endpoint.ErrorDetails:
-    properties:
-      message:
-        type: string
-    type: object
-  api_endpoint.ErrorResponse:
-    properties:
-      error:
-        $ref: '#/definitions/api_endpoint.ErrorDetails'
-    type: object
   blockatlas.Collection:
     properties:
       address:
@@ -35,10 +18,15 @@ definitions:
       total:
         type: integer
     type: object
+  blockatlas.CollectionPage:
+    items:
+      $ref: '#/definitions/blockatlas.Collection'
+    type: array
   blockatlas.Delegation:
     properties:
       delegator:
         $ref: '#/definitions/blockatlas.StakeValidator'
+        type: object
       metadata:
         type: object
       status:
@@ -54,13 +42,22 @@ definitions:
         type: string
       coin:
         $ref: '#/definitions/coin.ExternalCoin'
+        type: object
       delegations:
-        items:
-          $ref: '#/definitions/blockatlas.Delegation'
-        type: array
+        $ref: '#/definitions/blockatlas.DelegationsPage'
+        type: object
       details:
         $ref: '#/definitions/blockatlas.StakingDetails'
+        type: object
     type: object
+  blockatlas.DelegationsBatchPage:
+    items:
+      $ref: '#/definitions/blockatlas.DelegationResponse'
+    type: array
+  blockatlas.DelegationsPage:
+    items:
+      $ref: '#/definitions/blockatlas.Delegation'
+    type: array
   blockatlas.DocsResponse:
     properties:
       docs:
@@ -77,10 +74,12 @@ definitions:
     properties:
       details:
         $ref: '#/definitions/blockatlas.StakingDetails'
+        type: object
       id:
         type: string
       info:
         $ref: '#/definitions/blockatlas.StakeValidatorInfo'
+        type: object
       status:
         type: boolean
     type: object
@@ -103,6 +102,7 @@ definitions:
         type: string
       reward:
         $ref: '#/definitions/blockatlas.StakingReward'
+        type: object
       type:
         type: string
     type: object
@@ -122,25 +122,51 @@ definitions:
       symbol:
         type: string
     type: object
-  github.com_trustwallet_blockatlas_api_endpoint.AddressBatchRequest:
+  endpoint.AddressBatchRequest:
     properties:
       address:
         type: string
       coin:
         type: integer
     type: object
-  github.com_trustwallet_blockatlas_api_endpoint.ErrorDetails:
+  endpoint.AddressesRequest:
+    items:
+      $ref: '#/definitions/endpoint.AddressBatchRequest'
+    type: array
+  endpoint.ErrorDetails:
     properties:
       message:
         type: string
     type: object
-  github.com_trustwallet_blockatlas_api_endpoint.ErrorResponse:
+  endpoint.ErrorResponse:
     properties:
       error:
-        $ref: '#/definitions/github.com_trustwallet_blockatlas_api_endpoint.ErrorDetails'
+        $ref: '#/definitions/endpoint.ErrorDetails'
+        type: object
+    type: object
+  tokenindexer.Asset:
+    properties:
+      asset:
+        type: string
+      decimals:
+        type: integer
+      name:
+        type: string
+      symbol:
+        type: string
+      type:
+        type: string
+    type: object
+  tokenindexer.Response:
+    properties:
+      assets:
+        items:
+          $ref: '#/definitions/tokenindexer.Asset'
+        type: array
     type: object
 info:
   contact: {}
+  license: {}
 paths:
   /v2/{coin}/blocks/{block}:
     get:
@@ -167,7 +193,7 @@ paths:
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/github.com_trustwallet_blockatlas_api_endpoint.ErrorResponse'
+            $ref: '#/definitions/endpoint.ErrorResponse'
       summary: Get Block
       tags:
       - Transactions
@@ -200,7 +226,7 @@ paths:
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/api_endpoint.ErrorResponse'
+            $ref: '#/definitions/endpoint.ErrorResponse'
       summary: Get Stake Delegations
       tags:
       - Staking
@@ -227,7 +253,7 @@ paths:
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/api_endpoint.ErrorResponse'
+            $ref: '#/definitions/endpoint.ErrorResponse'
       summary: Get Validators
       tags:
       - Staking
@@ -256,13 +282,11 @@ paths:
         "200":
           description: OK
           schema:
-            items:
-              $ref: '#/definitions/blockatlas.Collection'
-            type: array
+            $ref: '#/definitions/blockatlas.CollectionPage'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/github.com_trustwallet_blockatlas_api_endpoint.ErrorResponse'
+            $ref: '#/definitions/endpoint.ErrorResponse'
       summary: Get Tokens
       tags:
       - Transactions
@@ -291,7 +315,7 @@ paths:
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/github.com_trustwallet_blockatlas_api_endpoint.ErrorResponse'
+            $ref: '#/definitions/endpoint.ErrorResponse'
       summary: Get Transactions
       tags:
       - Transactions
@@ -320,7 +344,7 @@ paths:
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/github.com_trustwallet_blockatlas_api_endpoint.ErrorResponse'
+            $ref: '#/definitions/endpoint.ErrorResponse'
       summary: Get Transactions by XPUB
       tags:
       - Transactions
@@ -336,18 +360,14 @@ paths:
         name: delegations
         required: true
         schema:
-          items:
-            $ref: '#/definitions/api_endpoint.AddressBatchRequest'
-          type: array
+          $ref: '#/definitions/endpoint.AddressesRequest'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            items:
-              $ref: '#/definitions/blockatlas.DelegationResponse'
-            type: array
+            $ref: '#/definitions/blockatlas.DelegationsBatchPage'
       summary: Get Multiple Stake Delegations
       tags:
       - Staking
@@ -363,18 +383,14 @@ paths:
         name: delegations
         required: true
         schema:
-          items:
-            $ref: '#/definitions/api_endpoint.AddressBatchRequest'
-          type: array
+          $ref: '#/definitions/endpoint.AddressesRequest'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            items:
-              $ref: '#/definitions/blockatlas.DelegationResponse'
-            type: array
+            $ref: '#/definitions/blockatlas.DelegationsBatchPage'
       summary: Get Multiple Stake Delegations
       tags:
       - Staking
@@ -419,17 +435,41 @@ paths:
           description: OK
           schema:
             items:
-              items:
-                $ref: '#/definitions/blockatlas.DelegationResponse'
-              type: array
+              $ref: '#/definitions/blockatlas.DelegationsBatchPage'
             type: array
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/api_endpoint.ErrorResponse'
+            $ref: '#/definitions/endpoint.ErrorResponse'
       summary: Get staking info by coin ID
       tags:
       - Staking
+  /v3/tokens/new:
+    get:
+      consumes:
+      - application/json
+      description: Get new tokens
+      operationId: tokens_new_v3
+      parameters:
+      - description: unix timestamp
+        in: query
+        name: from
+        required: true
+        type: integer
+      - description: coin like 60
+        in: query
+        name: coin
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/tokenindexer.Response'
+      summary: Get list of new tokens by coin from specific unix timstamp
+      tags:
+      - Transactions
   /v4/{coin}/collections/{owner}/collection/{collection_id}:
     get:
       consumes:
@@ -461,13 +501,11 @@ paths:
         "200":
           description: OK
           schema:
-            items:
-              $ref: '#/definitions/blockatlas.Collection'
-            type: array
+            $ref: '#/definitions/blockatlas.CollectionPage'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/github.com_trustwallet_blockatlas_api_endpoint.ErrorResponse'
+            $ref: '#/definitions/endpoint.ErrorResponse'
       summary: Get Collection
       tags:
       - Collections
